migrate from array to list in Rolap hierarchies, levels, dimensions Signed-off-by: dbulahov <bulahovdenis@gmail.com>